crates/keron-lang/tests/corpus/errors/check/symlink_wrong_arg_type.keron

val s: Symlink = symlink(from = 1, to = "x")
